k8s/apps/development/forgejo/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/instance: forgejo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/instance: forgejo
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:15.0.2-rootless
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 2222
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
