k8s/apps/development/forgejo/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
